@@ -14,6 +14,8 @@ changes made.  See document footer for additional details.
 --- 2014-XX-XX  Release 7.26.XX                                    ---
 ----------------------------------------------------------------------
 
+* added -rsize recursive size filter to search command - Cliff Yapp
+* added -size (object size filter) to search command - Cliff Yapp
 * added -L draw cmd option to draw bboxes for large bots - Cliff Yapp
 * minor rtwizard graphical user interface reorganization - Cliff Yapp
 * ported 'brlman' manual page viewer with GUI to Windows - Cliff Yapp
